<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/paddingLeft"
    android:layout_marginRight="@dimen/paddingRight"
    tools:context="com.navandu.micontacto.ConfirmContact">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_confirm_contact"
                android:textSize="@dimen/title_confirm_contact"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/marginTitleConfirm"
                android:layout_marginBottom="@dimen/marginTitleConfirm"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvNameConfirm"
                android:text="@string/name_dummy"
                android:textSize="@dimen/labelName"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/marginTopField">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/labelDate"
                    android:textStyle="bold"
                    android:layout_marginRight="@dimen/marginLabel"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvDateConfirm"
                    android:text="@string/date_dummy"
                    />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/marginTopField">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/labelTf"
                    android:textStyle="bold"
                    android:layout_marginRight="@dimen/marginLabel"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvTlfConfirm"
                    android:text="@string/tlf_dummy"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/marginTopField">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/labelMail"
                    android:textStyle="bold"
                    android:layout_marginRight="@dimen/marginLabel"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvEmailConfirm"
                    android:text="@string/email_dummy"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/marginTopField">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/labelDescription"
                    android:layout_marginRight="@dimen/marginLabel"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvDescriptionConfirm"
                    android:text="@string/description_dummy"
                    />
            </LinearLayout>


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_btn_edit"
                android:theme="@style/MiBotonRaise"
                android:id="@+id/BtnEdit"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/marginEditBtn"
                />

        </LinearLayout>


    </ScrollView>


</android.support.design.widget.CoordinatorLayout>
